--- a/civil_registry/pom.xml
+++ b/civil_registry/pom.xml
@@ -34,19 +34,20 @@
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>3.3.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-checkstyle-plugin</artifactId>
-                    <version>2.6</version>
+                    <version>3.3.0</version>
                     <configuration>
                         <configLocation>googlechecks.xml</configLocation>
-                        <consoleOutput>true</consoleOutput>
                     </configuration>
                     <executions>
                         <execution>
-                            <phase>package</phase>
                             <goals>
-                                <goal>
-                                    check
-                                </goal>
+                                <goal>check</goal>
                             </goals>
                         </execution>
                     </executions>
@@ -68,6 +69,7 @@
                             <descriptorRefs>
                                 <descriptorRef>jar-with-dependencies</descriptorRef>
                             </descriptorRefs>
+                            <appendAssemblyId>false</appendAssemblyId>
                             <archive>
                                 <manifest>
                                     <addClasspath>true</addClasspath>
@@ -82,6 +84,21 @@
                                 <goals>
                                     <goal>single</goal>
                                 </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jar-plugin</artifactId>
+                        <version>3.1.2</version>
+                        <executions>
+                            <execution>
+                                <id>default-jar</id>
+                                <phase>none</phase>
+                                <configuration>
+                                    <finalName>unwanted</finalName>
+                                    <classifier>unwanted</classifier>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
@@ -100,6 +117,7 @@
                             <descriptorRefs>
                                 <descriptorRef>jar-with-dependencies</descriptorRef>
                             </descriptorRefs>
+                            <appendAssemblyId>false</appendAssemblyId>
                             <archive>
                                 <manifest>
                                     <addClasspath>true</addClasspath>
@@ -114,6 +132,21 @@
                                 <goals>
                                     <goal>single</goal>
                                 </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jar-plugin</artifactId>
+                        <version>3.1.2</version>
+                        <executions>
+                            <execution>
+                                <id>default-jar</id>
+                                <phase>none</phase>
+                                <configuration>
+                                    <finalName>unwanted</finalName>
+                                    <classifier>unwanted</classifier>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
