--- a/civil_registry/pom.xml
+++ b/civil_registry/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.javaacademy</groupId>
         <artifactId>city</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <groupId>org.javaacademy.civil</groupId>
@@ -21,16 +21,19 @@
         <dependency>
             <groupId>org.javaacademy.human</groupId>
             <artifactId>human</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>1.0.1</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-collections4</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-lang3</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-            <scope>test</scope>
-        </dependency>
-
     </dependencies>
 
     <profiles>
@@ -82,6 +85,7 @@
                 </plugins>
             </build>
         </profile>
+
         <profile><id>PROM</id>
             <build>
                 <finalName>civil_registry_app_prom</finalName>
@@ -131,8 +135,5 @@
             </build>
         </profile>
     </profiles>
-
-
-
 
 </project>
