--- a/company/pom.xml
+++ b/company/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.javaacademy</groupId>
         <artifactId>city</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <groupId>org.example</groupId>
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>org.javaacademy.profession</groupId>
             <artifactId>profession</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>1.0.1</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
