--- a/human/pom.xml
+++ b/human/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>org.javaacademy</groupId>
         <artifactId>city</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <groupId>org.javaacademy.human</groupId>
     <artifactId>human</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
