--- a/civil_registry/pom.xml
+++ b/civil_registry/pom.xml
@@ -6,11 +6,12 @@
     <parent>
         <groupId>org.javaacademy</groupId>
         <artifactId>city</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <groupId>org.javaacademy.civil</groupId>
     <artifactId>civil_registry</artifactId>
+
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -21,8 +22,23 @@
         <dependency>
             <groupId>org.javaacademy.human</groupId>
             <artifactId>human</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>1.0.1</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-collections4</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-lang3</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.11</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -30,7 +46,12 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
-
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>5.10.1</version>
+                <scope>test</scope>
+            </dependency>
     </dependencies>
 
     <profiles>
@@ -50,7 +71,7 @@
                             <archive>
                                 <manifest>
                                     <addClasspath>true</addClasspath>
-                                    <mainClass>RunnerTest</mainClass>
+                                    <mainClass>org.javaacademy.civil.zags.RunnerTest</mainClass>
                                 </manifest>
                             </archive>
                         </configuration>
@@ -82,6 +103,7 @@
                 </plugins>
             </build>
         </profile>
+
         <profile><id>PROM</id>
             <build>
                 <finalName>civil_registry_app_prom</finalName>
@@ -98,7 +120,7 @@
                             <archive>
                                 <manifest>
                                     <addClasspath>true</addClasspath>
-                                    <mainClass>RunnerProm</mainClass>
+                                    <mainClass>org.javaacademy.civil.zags.RunnerProm</mainClass>
                                 </manifest>
                             </archive>
                         </configuration>
@@ -127,12 +149,27 @@
                             </execution>
                         </executions>
                     </plugin>
+                            <plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-surefire-plugin</artifactId>
+                                <version>3.0.0-M5</version>
+                            </plugin>
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <configuration>
+                            <excludes>
+                                <exclude>org/javaacademy/registry/civil/zags/CivilRegistry</exclude>
+<!--                                <exclude>org/javaacademy/Runner*</exclude>-->
+                            </excludes>
+                        </configuration>
+                    </plugin>
+
+
+
                 </plugins>
             </build>
         </profile>
     </profiles>
-
-
-
 
 </project>
