--- a/company/pom.xml
+++ b/company/pom.xml
@@ -102,7 +102,10 @@
                 <configuration>
                     <excludes>
                         <exclude>
-                            org.javaacademy.company.Runner
+                            org/javaacademy/company/Runner.class
+                        </exclude>
+                        <exclude>
+                            org.javaacademy.company.Company.class.
                         </exclude>
                     </excludes>
                 </configuration>
@@ -112,7 +115,7 @@
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
-                    <!-- attached to Maven test phase -->
+
                     <execution>
                         <id>report</id>
                         <phase>test</phase>
